--- a/app/src/main/res/layout/fragment_shop_products.xml
+++ b/app/src/main/res/layout/fragment_shop_products.xml
@@ -86,6 +86,21 @@
 
             </androidx.recyclerview.widget.RecyclerView>
 
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
+
+            <Button
+                android:id="@+id/retry_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/retry"
+                android:layout_marginTop="-50dp"
+                android:layout_gravity="center" />
+
             <ImageView
                 android:id="@+id/image_no_product"
                 android:layout_width="match_parent"
