changed transaction files into Kotlin

--- a/app/src/main/res/layout/transaction_list.xml
+++ b/app/src/main/res/layout/transaction_list.xml
@@ -1,8 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="#F1F5F8"
     tools:context="com.cabral.emaishapay.fragments.wallet_fragments.WalletTransactionsListFragment">
     <com.google.android.material.appbar.AppBarLayout
@@ -252,11 +254,5 @@
             app:tint="@color/white"
             android:visibility="gone"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
-
-
 </RelativeLayout>
+</layout>
