--- a/app/src/main/res/layout/order_details_item.xml
+++ b/app/src/main/res/layout/order_details_item.xml
@@ -34,7 +34,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/img_product"
+                    android:id="@+id/imgProduct"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:contentDescription="TODO"
@@ -51,7 +51,7 @@
                 android:paddingLeft="10dp">
 
                 <TextView
-                    android:id="@+id/txt_product_name"
+                    android:id="@+id/txtProductName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Product Name"
@@ -59,7 +59,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/txt_qty"
+                    android:id="@+id/txtQty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="2dp"
@@ -67,7 +67,7 @@
                     android:textColor="#000" />
 
                 <TextView
-                    android:id="@+id/txt_weight"
+                    android:id="@+id/txtWeight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="2dp"
@@ -81,7 +81,7 @@
                     android:weightSum="10">
 
                     <TextView
-                        android:id="@+id/txt_price"
+                        android:id="@+id/txtPrice"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
@@ -90,7 +90,7 @@
                         android:textColor="#000" />
 
                     <TextView
-                        android:id="@+id/txt_total_cost"
+                        android:id="@+id/txtTotalCost"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="8"
