--- a/app/src/main/res/layout/activity_view_p_d_f.xml
+++ b/app/src/main/res/layout/activity_view_p_d_f.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".pdf_report.ViewPDFActivity">
+    android:layout_height="match_parent">
+<!--    tools:context=".pdf_report.ViewPDFActivity">-->
 
-    <com.github.barteksc.pdfviewer.PDFView
-        android:id="@+id/pdfView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<!--    <com.github.barteksc.pdfviewer.PDFView-->
+<!--        android:id="@+id/pdfView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
 
-    </com.github.barteksc.pdfviewer.PDFView>
+<!--    </com.github.barteksc.pdfviewer.PDFView>-->
 
 </RelativeLayout>
