--- a/app/src/main/res/layout/buy_inputs_card_coupons.xml
+++ b/app/src/main/res/layout/buy_inputs_card_coupons.xml
@@ -37,12 +37,12 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:src="@drawable/ic_remove_circle"
-                android:tint="@color/colorAccentRed"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="5dp"
                 android:background="@android:color/transparent"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="5dp" />
+                android:layout_marginRight="5dp"
+                app:tint="@color/colorAccentRed" />
 
         </RelativeLayout>
 
