--- a/app/src/main/res/layout/buy_inputs_checkout.xml
+++ b/app/src/main/res/layout/buy_inputs_checkout.xml
@@ -75,10 +75,10 @@
                             android:layout_marginEnd="5dp"
                             android:layout_marginRight="5dp"
                             android:background="@android:color/transparent"
-                            android:tint="@color/colorAccent"
                             android:visibility="gone"
                             app:srcCompat="@drawable/ic_edit_profile"
-                            card_view:ignore="VectorDrawableCompat" />
+                            card_view:ignore="VectorDrawableCompat"
+                            app:tint="@color/colorAccent" />
 
                     </RelativeLayout>
 
