--- a/app/src/main/res/layout/dialog_payment.xml
+++ b/app/src/main/res/layout/dialog_payment.xml
@@ -23,7 +23,7 @@
                 android:layout_width="?attr/actionBarSize"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:tint="@android:color/white"
+                app:tint="@android:color/white"
                 app:srcCompat="@drawable/ic_close"
                 tools:ignore="VectorDrawableCompat" />
 
@@ -85,7 +85,7 @@
                     android:layout_width="?attr/actionBarSize"
                     android:layout_height="?attr/actionBarSize"
                     android:background="?attr/selectableItemBackgroundBorderless"
-                    android:tint="@color/grey_60"
+                    app:tint="@color/grey_60"
                     app:srcCompat="@drawable/ic_arrow_down"
                     tools:ignore="VectorDrawableCompat" />
 
@@ -119,7 +119,7 @@
                     android:layout_width="?attr/actionBarSize"
                     android:layout_height="?attr/actionBarSize"
                     android:background="?attr/selectableItemBackgroundBorderless"
-                    android:tint="@color/grey_60"
+                    app:tint="@color/grey_60"
                     app:srcCompat="@drawable/ic_arrow_down"
                     tools:ignore="VectorDrawableCompat" />
 
@@ -153,7 +153,7 @@
                     android:layout_width="?attr/actionBarSize"
                     android:layout_height="?attr/actionBarSize"
                     android:background="?attr/selectableItemBackgroundBorderless"
-                    android:tint="@color/grey_60"
+                    app:tint="@color/grey_60"
                     app:srcCompat="@drawable/ic_arrow_down"
                     tools:ignore="VectorDrawableCompat" />
 
