wallet Home Activity cleaning

--- a/app/src/main/res/layout/wallet_home.xml
+++ b/app/src/main/res/layout/wallet_home.xml
@@ -70,7 +70,7 @@
                 app:labelVisibilityMode="labeled"
                 app:menu="@menu/bottom_navigation_menu" />
             <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottomNavigationShop"
+                android:id="@+id/bottomNavShop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
